--- a/app/views/lists/index.haml
+++ b/app/views/lists/index.haml
@@ -2,3 +2,11 @@
 %h1
   Listas
 
+- @lists.each do |list|
+
+  %h2
+    = link_to(list.title, list_path(list))
+  = link_to(t('lists.edit'), 
+      edit_list_path(list), class: 'open-overlay', 'data-overlay' => 'list')
+
+
