--- a/app/views/lists/show.haml
+++ b/app/views/lists/show.haml
@@ -1,11 +1,26 @@
 
-%h1
-  = @list.title
+= form_for [:api, :v1, @list] do |f|
+  %h1
+    = @list.title
 
-%ul
-  - @list.items.each do |item|
-    %li
-      = item.description
+  %ul#items
+    - f.fields_for :items do |item|
+      = render 'item', :i => item
 
+  = link_to(t('list.item.add'), '#', class: 'add-item')
+
+- content_for :javascripts do
+  :javascript
+
+    var list = new List('#{@list.id}');
+
+    function createItem() {
+      var basic = "#{escape_javascript(render :partial => "lists/item", :locals => {:i => ActionView::Helpers::FormBuilder.new('__owner__[items_attributes][__index__]', Item.new(), self, {}, proc {})}) }";
+      var index = new Date() * 1 + parseInt(Math.random()*100000);
+      while (basic.indexOf("__owner__") != -1) basic = basic.replace("__owner__", "list");
+      while (basic.indexOf("__index__") != -1) basic = basic.replace("__index__", index);
+
+      return basic;
+    } 
 
 
