--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,8 @@
           %li
             %a.open-overlay{:href => "/lists/new", 'data-overlay' => 'list'} Nova Lista
         %h3.text-muted Luna To Do
-      = yield
+      #page-content
+        = yield
       .footer
         %p © Lab Luna 2014
 
