--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -13,21 +13,11 @@
   %body
     .container
       .header
-        %ul.nav.nav-pills.pull-right
-          %li
-            %a{:href => "/lists"} Listas
-          %li.active
-            %a.open-overlay{:href => "/lists/new", 'data-overlay' => 'list'} Nova Lista
-        %h3.text-muted Luna To Do
-        .wrap-alert.pull-right
-          .alert.alert-success.hidden{role: 'alert'}
-            = t('list.saved')
+        %h3 Luna To Do
       #page-content.well
         = yield
       .footer
         %p © Lab Luna 2014
-
-    #list.modal.fade{"aria-hidden" => "true", :role => "dialog", :tabindex => "-1"}
 
   = javascript_include_tag "application"
   = yield(:javascripts)
