--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,7 +101,8 @@ body {
 ul.items { list-style: none; margin: 30px 0px; padding: 0px; }
 ul.items li { border-color: #ECF1E2; border-radius: 10px; color: #ECF1E2; font-weight: bold; margin: 5px 0px; padding: 10px 5px 4px 5px; -webkit-border-radius: 10px; -moz-border-radius: 10px; }
 .item-container { height: 45px; vertical-align: middle; background-color: #79738F; }
-.item-description { display: inline-block; width: 450px; }
+.item-description { display: inline-block; width: 530px; }
+span.item-description { overflow: hidden; white-space: nowrap; }
 .item-description-field { color: #000; font-weight: normal; }
 li.item-container .remove-item { margin-top: -5px; }
 
