--- a/app/views/lists/index.haml
+++ b/app/views/lists/index.haml
@@ -9,6 +9,6 @@
   = link_to(t('lists.edit'), 
       edit_list_path(list), class: 'open-overlay btn btn-default', 'data-overlay' => 'list')
   = link_to(t('lists.remove'),
-      list_path(list), class: 'btn btn-danger', 'data-method' => 'delete', 'confirm' => t('confirm'))
+    list_path(list), class: 'btn btn-danger', data: {method: 'delete', confirm: t('confirm')})
 
 
