--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,13 @@
 !!!
 %html{:lang => "en"}
   %head
+
+    %link{:rel => "shortcut icon", :type => "image/x-icon", 
+          :href => "/favicon.png", :sizes => "16x16"}
+            
+    %link{:rel => "icon", :type => "image/x-icon", 
+          :href => "/favicon.png", :sizes => "16x16"}
+
     %meta{:charset => "utf-8"}/
     %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
